--- a/produtos.html
+++ b/produtos.html
@@ -18,7 +18,6 @@
         <a href="#" class="logo"> Promos Nise <span></span></a>
         <nav class="navbar">
             <a href="./index.html">Início</a>
-            <a href="./index.html">Sobre</a>
             <a href="produtos.html">Produtos</a>
 
         </nav>
@@ -40,18 +39,16 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="./raladorteste.jpg" alt="">
+                    <img src="./produto1" alt="">
 
-                    <div class="icons">
-                        <a href="#" class="fas fa-heart"> </a>
-                        <a href="https://shopee.com.br/COM-OFERTA-Ralador-4-Faces-Em-A%C3%A7o-Inox-Original-Line-Para-Cozinha-7-e-8-Leia-a-descri%C3%A7%C3%A3o-com-aten%C3%A7%C3%A3o-i.403112819.12822425811"
-                            target="_blank" class="cart-btn"> Compre já </a>
-                        <a href="#" class="fas fa-share"> </a>
+                    <div class="icons">                        
+                        <a href="#"
+                            target="_blank" class="cart-btn"> Comprar Agora </a>
                     </div>
                 </div>
 
                 <div class="content">
-                    <h3>Ralador </h3>
+                    <h3>Veda Porta Impermeável </h3>
                     <div class="price"> R$ 15,90</div>
                     <img src="./logo01.png" width="45%" height="25%" alt="">
                 </div>
@@ -61,92 +58,54 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="orquidea.png" alt="">
+                    <img src="./teste.webp" alt="">
 
-                    <div class="icons">
-                        <a href="#" class="fas fa-heart"> </a>
-                        <a href="#" class="cart-btn"> Compre Já </a>
-                        <a href="#" class="fas fa-share"> </a>
+                    <div class="icons">                        
+                        <a href="https://s.shopee.com.br/7pclRxFH8u?share_channel_code=1"
+                            target="_blank" class="cart-btn"> Comprar Agora </a>
                     </div>
                 </div>
 
                 <div class="content">
-                    <h3> Orquídea </h3>
-                    <div class="price"> R$69,90 </div>
-                </div>
-            </div>
-
-
-
-            <div class="box">
-                <div class="image">
-                    <img src="rosas.png" alt="">
-
-                    <div class="icons">
-                        <a href="#" class="fas fa-heart"> </a>
-                        <a href="#" class="cart-btn"> Adicionar </a>
-                        <a href="#" class="fas fa-share"> </a>
-                    </div>
-                </div>
-
-                <div class="content">
-                    <h3> Rosas </h3>
-                    <div class="price"> R$89,90 </div>
-                </div>
-            </div>
-
-
-
-            <div class="box">
-                <div class="image">
-                    <img src="rosasbrancas.png" alt="">
-
-                    <div class="icons">
-                        <a href="#" class="fas fa-heart"> </a>
-                        <a href="#" class="cart-btn"> Adicionar </a>
-                        <a href="#" class="fas fa-share"> </a>
-                    </div>
-                </div>
-
-                <div class="content">
-                    <h3> Rosas Brancas </h3>
-                    <div class="price"> R$99,90 </div>
+                    <h3>Conjunto Saída de Praia Feminina</h3>
+                    <div class="price"> R$ 34,95</div>
+                    <img src="./logo01.png" width="45%" height="25%" alt="">
                 </div>
             </div>
 
 
             <div class="box">
                 <div class="image">
-                    <img src="girassol.png" alt="">
+                    <img src="./produto2.webp" alt="">
 
-                    <div class="icons">
-                        <a href="#" class="fas fa-heart"> </a>
-                        <a href="#" class="cart-btn"> Adicionar </a>
-                        <a href="#" class="fas fa-share"> </a>
+                    <div class="icons">                        
+                        <a href="https://s.shopee.com.br/9KRZEzBhgu"
+                            target="_blank" class="cart-btn"> Comprar Agora </a>
                     </div>
                 </div>
 
                 <div class="content">
-                    <h3> Girassol </h3>
-                    <div class="price"> R$99,90 </div>
+                    <h3>Kit5 Elástico de Treino</h3>
+                    <div class="price"> R$ 19,88</div>
+                    <img src="./logo01.png" width="45%" height="25%" alt="">
                 </div>
             </div>
 
 
             <div class="box">
                 <div class="image">
-                    <img src="lirio.png" alt="">
+                    <img src="./produto3.webp" alt="">
 
-                    <div class="icons">
-                        <a href="#" class="fas fa-heart"> </a>
-                        <a href="#" class="cart-btn"> Adicionar </a>
-                        <a href="#" class="fas fa-share"> </a>
+                    <div class="icons">                        
+                        <a href="https://s.shopee.com.br/2AyPYAlcU2?share_channel_code=1"
+                            target="_blank" class="cart-btn"> Comprar Agora </a>
                     </div>
                 </div>
 
                 <div class="content">
-                    <h3> Lírio </h3>
-                    <div class="price"> R$89,90 </div>
+                    <h3>Espuma Mágica Limpa Tudo</h3>
+                    <div class="price"> R$ 27,90</div>
+                    <img src="./logo01.png" width="45%" height="25%" alt="">
                 </div>
             </div>
 </body>
